gccida/g1/gen_split_961
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_961/src/insn-emit.c:8854:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)v3, operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_961/src/insn-emit.c:8855:30: error: use of undeclared identifier 'machine_mode'
operands[2] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[2]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_961/src/insn-emit.c:8858:30: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1], operands[2]); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_961/src/obj/insn-emit.o] Error 1
